trunk/Archive2/4e/55f79e596f4f07/output
main.cpp:2464:13: error: expected ';' after struct definition
             }
             ^
main.cpp:2473:13: error: expected ';' after struct definition
             }
             ^
